sample_http_server: support for posting non-ascii characters

--- a/examples/sample_http_server/chat_board.html
+++ b/examples/sample_http_server/chat_board.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="utf-8"/>
 <title>FixLang Chat Room Demo</title>
 <style>
 body {background: #ffe; } 
@@ -20,11 +21,11 @@ input.message { width: 60vw; }
     and cleared when the demo program is terminated.</div>
 <div class="history">
     <div class="chat"><span class="name">Alice</span><span class="message">Hi there</span></div>
-    <div class="chat"><span class="name">Bob</span><span class="message">FixLang is nice</span></div>
+    <div class="chat"><span class="name">Bob</span><span class="message">FixLang is nice 😊</span></div>
     ${history}
 </div>
 <form action="/" method="post">
-<label>Name: <input class="name" name="name" type="text" maxlength="40" value="Anonymous"></label>
+<label>Name: <input class="name" name="name" type="text" maxlength="40" value="Anonymous😀"></label>
 <label>Message: <input class="message" name="message" type="text" maxlength="100"></label>
 <input type="submit" value="Send">
 </form>
