--- a/examples/sample_http_server/chat_board.html
+++ b/examples/sample_http_server/chat_board.html
@@ -25,7 +25,7 @@ input.message { width: 60vw; }
     ${history}
 </div>
 <form action="/" method="post">
-<label>Name: <input class="name" name="name" type="text" maxlength="40" value="Anonymous😀"></label>
+<label>Name: <input class="name" name="name" type="text" maxlength="40" value="${name}"></label>
 <label>Message: <input class="message" name="message" type="text" maxlength="100"></label>
 <input type="submit" value="Send">
 </form>
