--- a/examples/assets/fractal.html
+++ b/examples/assets/fractal.html
@@ -6,7 +6,8 @@
 <style>
 body {background: #ffe; } 
 div.params {border:1px solid #888; border-radius: 2vmin; margin: 5vmin; padding: 2vmin; }
-input.coord { width: 60vw; }
+input.coord { width: 30vw; }
+input.short { width: 10vw; }
 </style>
 </head>
 <body onload="onload()">
@@ -15,10 +16,11 @@ input.coord { width: 60vw; }
 <image id="image" width="512" height="512" draggable="false"></image>
 
 <div class="params">
-<div><label>X0: <input class="coord" name="x0" type="text" maxlength="80" value=""></label></div>
-<div><label>Y0: <input class="coord" name="y0" type="text" maxlength="80" value=""></label></div>
-<div><label>X1: <input class="coord" name="x1" type="text" maxlength="80" value=""></label></div>
-<div><label>Y1: <input class="coord" name="y1" type="text" maxlength="80" value=""></label></div>
+<div><label>X0: <input class="coord" name="x0" type="text" maxlength="40" value=""></label></div>
+<div><label>Y0: <input class="coord" name="y0" type="text" maxlength="40" value=""></label></div>
+<div><label>X1: <input class="coord" name="x1" type="text" maxlength="40" value=""></label></div>
+<div><label>Y1: <input class="coord" name="y1" type="text" maxlength="40" value=""></label></div>
+<div><label>loop_max: <input class="short" name="loop_max" type="text" maxlength="10" value=""></label></div>
 <input type="button" value="Render" onclick="render()">
 <input type="button" value="Undo" onclick="pop_stack()">
 <input type="button" value="Reset" onclick="reset_and_render()">
@@ -28,7 +30,8 @@ input.coord { width: 60vw; }
         x0: -2.0,
         y0: -1.25,
         x1: 0.5,
-        y1: 1.25
+        y1: 1.25,
+        loop_max: 20
     };
     let param = { ...default_param };
     let param_stack = [];
@@ -75,7 +78,7 @@ input.coord { width: 60vw; }
     }
     function render() {
         const p = get_param();
-        const url = `/image?x0=${p.x0}&y0=${p.y0}&x1=${p.x1}&y1=${p.y1}`;
+        const url = `/image?x0=${p.x0}&y0=${p.y0}&x1=${p.x1}&y1=${p.y1}&loop_max=${p.loop_max}`;
         image_element().src=url;
     }
 
